--- a/FrontEnd/templates/signup.html
+++ b/FrontEnd/templates/signup.html
@@ -34,6 +34,8 @@
 	<!-- responsive -->
 	<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<style>
 		.games{
 			color: #fff;
@@ -265,8 +267,11 @@ text-align:left;
 			<i class="fa fa-envelope"></i>
 		</span>
         <label for="email">Email:</label>
-        <input type="email" id="email" class="input-box" name="Email" required placeholder="Enter your email" pattern=".+@globex\.com" size="30" 
-        title="Enter a valid email address (e.g., example@example.com).">
+		<input type="email" id="email" class="input-box" name="Email" required placeholder="Enter your email" 
+		pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" 
+		size="30" 
+		title="Enter a valid email address (e.g., user@example.com).">
+ 
     </div>
     <div class="input-pair">
 		<span class="input-item">
