--- a/FrontEnd/templates/History.html
+++ b/FrontEnd/templates/History.html
@@ -156,9 +156,7 @@
 					</div>
 				</div>
 				<ul class="Realbreadcrumb">
-					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
-					<li class="breadcrumb-item"><a href="{% url 'signup' %}" >Sign Up</a></li>
-					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
+					{% breadcrumb %}
 					<li class="breadcrumb-item current"><a href="{% url 'History' %}">Downloaded Games</a></li>
 				</ul>
 			</div>
