--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -81,7 +81,7 @@ background: linear-gradient(96deg, rgba(21,22,51,1) 0%, rgba(226,42,162,1) 86%);
 
 
 .input-box {
-    width: 60%; /* Make inputs take full width of the form */
+    width: 60%;
     padding: 10px; /* Reduce padding for inputs */
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     border: none;
@@ -192,7 +192,6 @@ background: linear-gradient(96deg, rgba(21,22,51,1) 0%, rgba(226,42,162,1) 86%);
   left: 50;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .popup-content {
@@ -384,7 +383,7 @@ background: linear-gradient(96deg, rgba(21,22,51,1) 0%, rgba(226,42,162,1) 86%);
 </div>
 <!-- Password reset Success Pop-up (hidden by default) -->
 <div id="passwordResetComplete" class="popup">
-    <div class="popup-content Complete" style="padding: 40px;">
+    <div class="popup-content Complete" style="padding: 70px;">
         <span class="close" id="closePopupComplete">&times;</span>
         <h3>Password has been successfully reset!</h3>
     </div>
